--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -299,7 +299,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
 
     <string name="speak_no_books_available">No books available to speak</string>
 
-    <string name="conf_speak_synchronize">Synchronize text with speech</string>
+    <string name="conf_speak_synchronize">Text follows speech</string>
     <string name="conf_speak_auto_bookmark">Automatic bookmarking</string>
     <string name="conf_save_playback_settings_to_bookmarks">Save playback settings to bookmarks</string>
     <string name="conf_replace_divinename">Replace divine name with Yahweh</string>
@@ -307,7 +307,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="conf_change_title">Titles</string>
     <string name="conf_speak_footnotes">Footnotes</string>
     <string name="conf_speak_sleep_timer">Set sleep timer</string>
-    <string name="conf_speak_multitranslation">Compare translations by speaking from all visible windows</string>
+    <string name="conf_speak_multitranslation">Speaking from all visible windows</string>
 
     <string name="sleep_timer_title">Sleep time in minutes</string>
     <string name="sleep_timer_set">Set sleep timer. Timer set: %d minutes</string>
