--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,23 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
 -->
 <resources>
     <string name="app_name">And Bible</string>
+
+    <!-- Old long help text. This will be removed later. -->
+    <string name="help_text_long"><b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger
+    \nDouble-tap toggles Fullscreen on/off.
+    \n\n<b>Menu</b>
+    \nPress the MENU button for actions
+    \n\nTo download more documents press Menu/Administration/Download Documents
+    \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading
+    \n\n<b>My Note</b>\nNotes can be added via the My Note menu item on the verse context menu.  The list of existing notes can be accessed via the main menu.
+    \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu.  The Bookmark Manager is accessed via the main menu.  The Bookmark Manager context menu allows bookmarks to be grouped using labels.
+    \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see "Apache Lucene - Query Parser Syntax" for more details)
+    \n\n<b>Context Menus</b>
+    \nLong press on the Bible view to open the context menu for actions affecting the current verse.
+    \nLong press on a document in the document selector to delete it or view information.
+    \nLong press the Back button to access the History list
+    </string>
+    
     <!-- Startup & Help -->
     <string name="splash_top_text">\n\"And God said, \'Let there be light,\' and there was light.\"\nGenesis 1:3</string>
     <string name="help_text">Press the MENU button for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
